--- a/EAD.OnlineClass/EAD.OnlineClass/Areas/Administrador/Views/Cursos/CadastrarCursos.cshtml
+++ b/EAD.OnlineClass/EAD.OnlineClass/Areas/Administrador/Views/Cursos/CadastrarCursos.cshtml
@@ -38,6 +38,8 @@
     @Html.ActionLink("Voltar", "Index")
 </div>
 
+@* ReSharper disable Razor.SectionNotResolved *@
 @section Scripts {
+@* ReSharper restore Razor.SectionNotResolved *@
     @Scripts.Render("~/bundles/jqueryval")
 }
