--- a/EAD.OnlineClass/EAD.OnlineClass/Areas/Administrador/Views/Painel/Cadastrar.cshtml
+++ b/EAD.OnlineClass/EAD.OnlineClass/Areas/Administrador/Views/Painel/Cadastrar.cshtml
@@ -46,6 +46,8 @@
     @Html.ActionLink("Voltar", "Inicio")
 </div>
 
+@* ReSharper disable Razor.SectionNotResolved *@
 @section Scripts {
+@* ReSharper restore Razor.SectionNotResolved *@
     @Scripts.Render("~/bundles/jqueryval")
 }
